--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows
     steps:
       - uses: actions/checkout@v3
       - name: Compute next tag
@@ -16,11 +16,9 @@ jobs:
           github_token: ${{ github.token }}
           version_scheme: semantic
           version_type: patch
-      - uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: 3.1.x
+      - uses: microsoft/setup-msbuild@v1
       - name: build
-        run: dotnet build NoTraderProtection.sln --configuration Release
+        run: msbuild NoTraderProtection.csproj -property:Configuration=Release
       - name: package
         run: |
           mkdir NoTraderProtection
