--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows
+    runs-on: windows-2019
     steps:
       - uses: actions/checkout@v3
       - name: Compute next tag
