--- a/NoTraderProtection.csproj
+++ b/NoTraderProtection.csproj
@@ -32,13 +32,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony">
-      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\7 Days To Die\7DaysToDie_Data\Managed\0Harmony.dll</HintPath>
+      <HintPath>%SEVEN_DAYS_ASSEMBLIES%\%SEVEN_DAYS_TARGET_VERSION%\assemblies\0Harmony.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp">
-      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\7 Days To Die\7DaysToDie_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <HintPath>%SEVEN_DAYS_ASSEMBLIES%\%SEVEN_DAYS_TARGET_VERSION%\assemblies\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="LogLibrary">
-      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\7 Days To Die\7DaysToDie_Data\Managed\LogLibrary.dll</HintPath>
+      <HintPath>%SEVEN_DAYS_ASSEMBLIES%\%SEVEN_DAYS_TARGET_VERSION%\assemblies\LogLibrary.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -53,9 +53,6 @@
     <Compile Include="NoTraderProtection.cs" />
     <Compile Include="ModInit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="ModFolder\ModInfo.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
