--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,9 +20,7 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: |
-          mkdir .\7d2d-server-files\alpha-21.0\assemblies
-          aws s3 sync s3://7d2d-server-files/alpha21.0/asseblies .\7d2d-server-files\alpha-21.0\assemblies
+        run: aws s3 sync s3://7d2d-server-files/alpha-21.0/assemblies .\7d2d-server-files\alpha-21.0\assemblies
       - uses: microsoft/setup-msbuild@v1
       - name: build
         env:
